@@ -379,7 +379,7 @@ public class AccommodationPledgeDaoImpl implements AccommodationPledgeDao
      */
     public Long createAndStoreAccommodationPledge(AccommodationPledge accommodationPledge, Long userId)
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
 
         accommodationPledge.setCreatedByID(userId);
         accommodationPledge.setUpdatedByID(userId);
@@ -464,7 +464,7 @@ public class AccommodationPledgeDaoImpl implements AccommodationPledgeDao
     public Long createAndStoreAccommodationPledgeFilter(AccommodationPledgeFilter accommodationPledgeFilter,  Long userId)
         throws AccommodationPledgeSaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 
 		try
@@ -501,7 +501,7 @@ public class AccommodationPledgeDaoImpl implements AccommodationPledgeDao
     public Long updateAccommodationPledgeFilter(AccommodationPledgeFilter accommodationPledgeFilter, Long userId)
         throws AccommodationPledgeLoadException, AccommodationPledgeSaveException, AuthorisationException, InvalidUserIDException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
     	
         //if (Authorisation.isAuthorisedUpdate("AccommodationPledge", userID, ACCOMMODATIONPLEDGEID) == false)
         //{
