@@ -473,7 +473,7 @@ public class AccommodationPledgeServiceImpl implements AccommodationPledgeServic
     public Long createAndStoreAccommodationPledgeFilter(AccommodationPledgeFilter accommodationPledgeFilter, Long userId)
         throws AccommodationPledgeSaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 
 		try
@@ -508,7 +508,7 @@ public class AccommodationPledgeServiceImpl implements AccommodationPledgeServic
     public Long updateAccommodationPledgeFilter(AccommodationPledgeFilter accommodationPledgeFilter, Long userId)
         throws AccommodationPledgeLoadException, AccommodationPledgeSaveException, AuthorisationException, InvalidUserIDException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
     	
         //if (Authorisation.isAuthorisedUpdate("AccommodationPledge", userId, ACCOMMODATIONPLEDGEID) == false)
         //{
