@@ -353,7 +353,7 @@ public class AddressServiceImpl implements AddressService
     public Long createAndStoreAddressFilter(AddressFilter addressFilter, Long userId)
         throws AddressSaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 
 		try
@@ -388,7 +388,7 @@ public class AddressServiceImpl implements AddressService
     public Long updateAddressFilter(AddressFilter addressFilter, Long userId)
         throws AddressLoadException, AddressSaveException, AuthorisationException, InvalidUserIDException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
     	
         //if (Authorisation.isAuthorisedUpdate("Address", userId, ADDRESSID) == false)
         //{
