@@ -51,8 +51,8 @@ public class ViewHistory
      */
     public ViewHistory()
     {
-    	viewID = new Long(0);
-    	viewName = new String();
+    	viewID = Long.valueOf(0);
+    	viewName = "";
 		
     }
     
