@@ -33,7 +33,7 @@ public class ViewTranslationBackingBeanImpl extends ViewImpl implements ViewTran
     private static final long serialVersionUID = 1L;
     
     /** The identifier for the Page Administration view */
-    public static final Long VIEW_ID = new Long(9);
+    public static final Long VIEW_ID = Long.valueOf(9);
     
     /** The mapping key for the page title as displayed in the browser tab */
     public static String VIEW_TITLE_MAPPING_KEY = "view.form.title";
@@ -120,22 +120,22 @@ public class ViewTranslationBackingBeanImpl extends ViewImpl implements ViewTran
     public ViewTranslationBackingBeanImpl()
     {
     	setViewId(ViewTranslationBackingBeanImpl.VIEW_ID);
-		viewNameLabelMessageKey = new String();  
-		viewNameLabel = new String();
-		viewNamePlaceHolderMessageKey = new String();
-		viewNamePlaceHolder = new String();
-		viewNameHelpTextMessageKey = new String();
-		viewNameHelpText = new String();
-		viewNameTooltipMessageKey = new String();
-		viewNameTooltip = new String();
-		saveButtonLabelMessageKey = new String();  
-		saveButtonLabel = new String();
-		saveButtonPlaceHolderMessageKey = new String();
-		saveButtonPlaceHolder = new String();
-		saveButtonHelpTextMessageKey = new String();
-		saveButtonHelpText = new String();
-		saveButtonTooltipMessageKey = new String();
-		saveButtonTooltip = new String();
+		viewNameLabelMessageKey = "";
+		viewNameLabel = "";
+		viewNamePlaceHolderMessageKey = "";
+		viewNamePlaceHolder = "";
+		viewNameHelpTextMessageKey = "";
+		viewNameHelpText = "";
+		viewNameTooltipMessageKey = "";
+		viewNameTooltip = "";
+		saveButtonLabelMessageKey = "";
+		saveButtonLabel = "";
+		saveButtonPlaceHolderMessageKey = "";
+		saveButtonPlaceHolder = "";
+		saveButtonHelpTextMessageKey = "";
+		saveButtonHelpText = "";
+		saveButtonTooltipMessageKey = "";
+		saveButtonTooltip = "";
 
     }
     
