@@ -339,7 +339,7 @@ public class RegisterOfPledgesBoImpl implements RegisterOfPledgesBo
     public Long createAndStoreRegisterOfPledges(RegisterOfPledges registerOfPledges, Long userID)
         throws RegisterOfPledgesSaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 		try
 		{
@@ -432,7 +432,7 @@ public class RegisterOfPledgesBoImpl implements RegisterOfPledgesBo
     public Long createAndStoreRegisterOfPledgesFilter(RegisterOfPledgesFilter registerOfPledgesFilter,  Long userId)
         throws RegisterOfPledgesSaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 		try
 		{
@@ -466,7 +466,7 @@ public class RegisterOfPledgesBoImpl implements RegisterOfPledgesBo
     public Long updateRegisterOfPledgesFilter(RegisterOfPledgesFilter registerOfPledgesFilter, Long userId)
         throws RegisterOfPledgesLoadException, RegisterOfPledgesSaveException, AuthorisationException, InvalidUserIDException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
     	
         //if (Authorisation.isAuthorisedUpdate("RegisterOfPledges", userId, REGISTEROFPLEDGESID) == false)
         //{
