@@ -85,11 +85,11 @@ public class ReferenceCategoryImpl implements ReferenceCategory, Serializable {
     public ReferenceCategoryImpl()
     {
     	
-		this.referenceCategoryDesc = new String();
+		this.referenceCategoryDesc = "";
 		
-		this.parentCategoryId = new Long("0");
+		this.parentCategoryId = Long.valueOf("0");
 		
-		this.description = new String();
+		this.description = "";
 		
     	this.dateCreated = new Date();
     	this.dateUpdated = new Date();
