@@ -262,7 +262,7 @@ public class ServicePledgeDaoImpl implements ServicePledgeDao
      */
     public Long createAndStoreServicePledge(ServicePledge servicePledge, Long userId)
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
 
         servicePledge.setCreatedByID(userId);
         servicePledge.setUpdatedByID(userId);
@@ -347,7 +347,7 @@ public class ServicePledgeDaoImpl implements ServicePledgeDao
     public Long createAndStoreServicePledgeFilter(ServicePledgeFilter servicePledgeFilter,  Long userId)
         throws ServicePledgeSaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 
 		try
@@ -384,7 +384,7 @@ public class ServicePledgeDaoImpl implements ServicePledgeDao
     public Long updateServicePledgeFilter(ServicePledgeFilter servicePledgeFilter, Long userId)
         throws ServicePledgeLoadException, ServicePledgeSaveException, AuthorisationException, InvalidUserIDException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
     	
         //if (Authorisation.isAuthorisedUpdate("ServicePledge", userID, SERVICEPLEDGEID) == false)
         //{
