@@ -78,17 +78,17 @@ public class ApplicationUserDetailsHistory
      */
     public ApplicationUserDetailsHistory()
     {
-    	applicationUserDetailsID = new Long(0);
-    	contactName = new String();
-		representOrganisation = new Long("0");
-		telephoneNumber = new String();
-		addressOne = new String();
-		addressTwo = new String();
-		city = new String();
-		stateProvinceRegion = new String();
-		postCode = new String();
-		country = new Long("0");
-		emailAddress = new String();
+    	applicationUserDetailsID = Long.valueOf(0);
+    	contactName = "";
+		representOrganisation = Long.valueOf("0");
+		telephoneNumber = "";
+		addressOne = "";
+		addressTwo = "";
+		city = "";
+		stateProvinceRegion = "";
+		postCode = "";
+		country = Long.valueOf("0");
+		emailAddress = "";
 		
     }
     
